fix: collapse sidebar on Video.vue

--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -378,13 +378,6 @@ iframe {
   }
 }
 
-// Media Page
-.media-page {
-  .main-sidebar {
-    display: none !important;
-  }
-}
-
 // Media component
 .media-frame {
   position: relative;
